--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,13 @@ h1 {
     margin-bottom: 2%;
 }
 
+h2 {
+    color: rgb(209, 206, 206);
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
 .button-top {
     text-align: center;
     margin-bottom: 2%;
@@ -28,14 +35,24 @@ button {
     display: grid;
     gap: 1em;
     margin: 0.5em;
-    
+
+}
+
+.userboard-frame {
+    display: grid;
+    gap: 1em;
+    margin: 0.5em;
+
 }
 
 @media(min-width:1000px) {
     .bingo-frame {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-       
+    }
+    .userboard-frame {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 }
 
@@ -47,6 +64,17 @@ button {
     border-color: rgba(210,225,236,.88);
     border-radius: 3px 10px 3px 3px;
     padding: 0.7em;
+}
+
+.userboard-number {
+    color: black;;
+    background: rgba(153, 228, 246, 0.88); 
+    border-color: rgba(173,206,195,.38);
+    border: solid 1px;
+    border-color: rgba(210,225,236,.88);
+    border-radius: 10px 3px 3px 3px;
+    padding: 0.7em;
+
 }
   
 .highlighted-cell {
